[package]
name = "alds1_14_b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
mersenne-modint = { path = '../../../math/mersenne-modint' }
rolling-hash-segment-tree = { path = '../../../string/rolling-hash-segment-tree' }
