[package]
name = "dpl_5_d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
combinatorics = { path = "../../../math/combinatorics" }
modint = { path = "../../../math/modint" }
