[package]
name = "dsl_2_f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
query = { path = '../../../macro/query' }
lazy-segment-tree = { path = '../../../data-structure/lazy-segment-tree' }
