[package]
name = "grl_3_c_kosaraju"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
strongly-connected-components-kosaraju = { path = "../../../graph/strongly-connected-components-kosaraju" }
union-find = { path = "../../../data-structure/union-find" }
