[package]
name = "grl_5_d"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
query = { path = '../../../macro/query' }
fenwick-tree-abstract = { path = '../../../data-structure/fenwick-tree-abstract' }
heavy-light-decomposition = { path = "../../../tree/heavy-light-decomposition" }
