[package]
name = "binomial_coefficient_prime_mod_montgomery"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
binomial = { path = "../../../math/binomial" }
dynamic-modint = { path = "../../../math/dynamic-modint" }
dynamic-montgomery-modint = { path = "../../../math/dynamic-montgomery-modint" }
