[package]
name = "cartesian_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
proconio = { version = "0.4.5", features = ["derive"] }
cartesian-tree = { path = "../../../tree/cartesian-tree" }
