[package]
name = "number_of_substrings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
lcp-array = { path = "../../../string/lcp-array" }
suffix-array = { path = "../../../string/suffix-array" }
