[package]
name = "predecessor_problem_persistent_segtree_pool"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
persistent-segment-tree-pool = { path = "../../../data-structure/segment-tree/persistent-segment-tree-pool" }
query = { path = "../../../macro/query" }
