[package]
name = "scc-kosaraju"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
proconio = { version = "0.4.5", features = ["derive"] }
strongly-connected-components-kosaraju = { path = "../../../graph/strongly-connected-components-kosaraju" }
