[package]
name = "static_range_inversions_query"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
proconio = { version = "0.5.0", features = ["derive"] }
superslice = "1.0.0"
mo = { path = "../../../data-structure/mo" }
fenwick-tree = { path = "../../../data-structure/fenwick-tree" }
