[package]
name = "unionfind_with_potential_non_commutative_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
union-find-with-potential = { path = "../../../data-structure/union-find-with-potential" }
modint = { path = "../../../math/modint" }
