[package]
name = "unionfind_with_potential_non_commutative_group"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
query = { path = '../../../macro/query' }
union-find-with-potential = { path = "../../../data-structure/union-find-with-potential" }
modint = { path = "../../../math/modint" }
