[package]
name = "vertex_add_subtree_sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
fenwick-tree = { path = '../../../data-structure/fenwick-tree' }
euler-tour = { path = "../../../tree/euler-tour" }
