[package]
name = "vertex_add_subtree_sum"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
query = { path = '../../../macro/query' }
fenwick-tree = { path = '../../../data-structure/fenwick-tree' }
euler-tour = { path = "../../../tree/euler-tour" }
