[package]
name = "vertex_set_path_composite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
query = { path = '../../../macro/query' }
euler-tour = { path = "../../../tree/euler-tour" }
segment-tree = { path = '../../../data-structure/segment-tree' }
modint = { path = "../../../math/modint" }
