[package]
name = "vertex_set_path_composite"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
query = { path = '../../../macro/query' }
euler-tour = { path = "../../../tree/euler-tour" }
segment-tree = { path = '../../../data-structure/segment-tree' }
modint = { path = "../../../math/modint" }
