[package]
name = "dynamic_sequence_range_affine_range_sum_implicit_treap"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
implicit-treap = { path = "../../../../data-structure/balanced-binary-search-tree/implicit-treap" }
modint = { path = "../../../../math/modint/modint" }
query = { path = "../../../../macro/query" }
