[package]
name = "range_affine_point_get-lazy-segment-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
lazy-segment-tree = { path = "../../../../data-structure/segment-tree/lazy-segment-tree" }
modint = { path = "../../../../math/modint/modint" }
query = { path = "../../../../macro/query" }
