[package]
name = "range_reverse_range_sum_implicit_treap"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
implicit-treap = { path = "../../../../data-structure/balanced-binary-search-tree/implicit-treap" }
query = { path = "../../../../macro/query" }
