[package]
name = "static_range_inversions_query"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
fenwick-tree = { path = "../../../../data-structure/fenwick-tree" }
lower-bound = { path = "../../../../macro/lower-bound" }
mo = { path = "../../../../data-structure/mo" }
