[package]
name = "two_edge_connected_components"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
itertools = { path = "../../../../macro/itertools" }
two-edge-connected-components = { path = "../../../../graph/two-edge-connected-components" }
