[package]
name = "predecessor_problem_persistent_segment_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
persistent-segment-tree = { path = "../../../../data-structure/segment-tree/persistent-segment-tree" }
query = { path = "../../../../macro/query" }
