[package]
name = "rooted_tree_isomorphism_classification"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
itertools = { path = "../../../../macro/itertools" }
modint-mersenne61 = { path = "../../../../math/modint/modint-mersenne61" }
tree-isomorphism = { path = "../../../../tree/tree-isomorphism" }
